--- a/main2.html
+++ b/main2.html
@@ -1650,7 +1650,7 @@
               "iron"
                     ];
                     
-                    for(var i = 0; i < 2; i++) {
+                    for(var i = 0; i < 1; i++) {
                     document.write("<span class=\"text1\">"+"<a href='random.html'>"+words[Math.floor(Math.random()*words.length)] +
                     "</a>"+"-"+"<br>"+"</span>");
                     document.write("<span class=\"text1\">"+"<a href='random.html'>"+words[Math.floor(Math.random()*words.length)] +
@@ -1675,15 +1675,15 @@
 
                     // a1
                     var img_list = [
-                        './images/a1.jpg',
-                        //'./images/a2.jpg',
-                        './images/a3.jpg',
-                        './images/a4.jpg',
-                        './images/a5.jpg',
-                        //'./images/a6.jpg',
-                        './images/a7.jpg',
-                        './images/a8.jpg',
-                        './images/a9.jpg'
+                        'https://i.imgur.com/h68jzUb.jpg', //a1.jpg
+                        //'https://i.imgur.com/eTUTQKe.jpg',
+                        'https://i.imgur.com/Em3NqbQ.jpg',
+                        'https://i.imgur.com/AKI8qbk.jpg',
+                        'https://i.imgur.com/H0pAVGM.jpg',
+                        //'https://i.imgur.com/7keOPsG.jpg',
+                        'https://i.imgur.com/0rFVkMM.jpg',
+                        'https://i.imgur.com/Z4DDwCJ.jpg',
+                        'https://i.imgur.com/RdSfxID.jpg'
                     ];
                     var index = Math.floor(Math.random()*img_list.length);
                     
@@ -1726,7 +1726,7 @@
                         //'./images/b7.svg',
                         //'./images/b8.svg',
                         './images/b9.svg',
-                        './images/b9_color.svg',
+                        //'./images/b9_color.svg',
                         './images/b9_line.svg',
                         './images/c3.svg',
                         ];
@@ -1769,9 +1769,9 @@
                             //'./images/b8.svg'
                             //'./images/b3.svg',
                             //'./images/b1.svg'
-                            './images/b9.svg',
-                            './images/b9_color.svg',
-                            './images/b9_line.svg',
+                            //'./images/b9.svg',
+                            //'./images/b9_color.svg',
+                            //'./images/b9_line.svg',
                             './images/c3.svg',
                             ];
                             var index = Math.floor(Math.random()*img_list.length);
