--- a/4VIDEOS.html
+++ b/4VIDEOS.html
@@ -14,24 +14,60 @@
                 display: grid;
                 grid-template-columns: 10% 90%;
                 grid-template-rows: 1fr;
-                padding-bottom:40px;
-                position: relative;   
+                padding-bottom:50px;
+                padding-right:50px;
+                position: sticky;
+                top: 0;
+                z-index: 1;
+                background-color: black;
+                border-bottom: 1px solid lightgrey;
+                /* border: 1px solid white; */
             }
             .text1 {
              text-align: left;
              font-size: 1vw;
-             font-family: 'Helvetica Neue';
-             font-weight: 500;
+             font-family: 'Noto Sans KR', sans-serif;
+             font-weight: 700;
+             letter-spacing: 0px;
+             word-spacing: 0px;
+             line-height: 1.8vw;
              color: white;
             }
-            .container_body {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: 1fr 1fr;
-                position: relative;   
-                gap: 30px;
-                gap: 30px;
+
+            .text2 {
+             text-align: left;
+             font-style:oblique;
+             font-size: 1vw;
+             font-family: 'helvetica';
+             font-weight: 700;
+             letter-spacing: 0px;
+             word-spacing: 0px;
+             line-height: 1.8vw;
+             color: white;
             }
+
+            .text3 {
+             text-align: left;
+             font-size: 1vw;
+             font-family: 'Noto Sans KR', sans-serif;
+             font-weight: 500;
+             letter-spacing: 0px;
+             word-spacing: 0px;
+             line-height: 1.8vw;
+             color: white;
+            }
+
+            .container_body1 {
+                display: grid;
+                grid-template-columns: 10% 50% 40%;
+                grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+                padding-top:50px;
+                padding-right:50px;
+                position: relative;  
+                /* border: 1px solid white; */
+
+            }
+
             .vid {
                 position: relative;
                 padding-bottom: 56.25%; /* 16:9 */
@@ -43,21 +79,14 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                border-radius: 50%;
-                border: 1px solid white;
-                filter: brightness(30%);
-                transition: filter 2s, border-radius 1s;
+
             }
-            .vid_attr:hover {
-                /* border: 1px; */
-                border-radius: 0%;  
-                filter: brightness(100%);
-            }
+
         </style>
 
     </head>
     <body>
-        <div class="container_header">
+        <div class="container_header" style="position: stikcy;">
             <div>
                 <a href="main4.html" style="color: white">
                 <span class="text1">
@@ -66,43 +95,76 @@
                 </a>
             </div>
             <div class="text1">
-                <span
-                style="color:white;
-                text-decoration:line-through;
-                text-decoration-color:white;">
-            오징어 다리를 달고 태어난 강대걸은
-            동물 보호법 제 21조 제 3항에 의거하여
-            매화 마을 우물에 살고 있다.
-            우물 속 강대걸은 요셉에게 말을 걸었다.
-            “번개탄 냄새 한번 맡아보실래요?”
-            “이런 것까지 해주나요?”
-            향의 포근한 느낌이 스트레스처럼 다가왔다.
-            한박자 느리게 진폭이 느껴졌다.
-            “세로토닌 분비를 증가시키거든요”
-            후각과 시각사이 간격이 멀어졌다.
-                </span>
-                <span
-                style="color:white;
-                text-decoration:line-none;
-                text-decoration-color:white;">
-                 "꿈꾸는 요셉."
-                </span>
+                (1) 대걸 (2) 오징어 살인사건 (3) 꿈꾸는 요셉 (4) genesis
             </div>
         </div>
-        <div class="container_body">
+        <div class="container_body1">
+            <div></div>
             <div class = "vid">
-                <iframe class = "vid_attr" src="https://player.vimeo.com/video/425648418?autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&autopause=0" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe class = "vid_attr" src="https://player.vimeo.com/video/435287183?autoplay=0&loop=0&title=0&byline=0&portrait=0&muted=0&autopause=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
+            <div></div>
+            <div></div>
+            <div>
+                <div class="text2">
+                    <br>
+                    대걸, 2020
+                </div>
+                <div class="text3">
+                    이지민 (Jimin Lee)
+                </div>
+            </div>
+            <div></div>
+            <div></div>
             <div class = "vid">
-                <iframe class = "vid_attr" src="https://player.vimeo.com/video/425648811?autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&autopause=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe class = "vid_attr" src="https://player.vimeo.com/video/435299868?autoplay=0&loop=0&title=0&byline=0&portrait=0&muted=0&autopause=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
+            <div></div>
+            <div></div>
+            <div>
+                <div class="text2">
+                    <br>
+                    오징어 살인사건, 2020
+                </div>
+                <div class="text3">
+                    장희진 (Heejin Jang)
+                </div>
+            </div>
+            <div></div>
+            <div></div>
             <div class = "vid">
-                <iframe class = "vid_attr" src="https://player.vimeo.com/video/425648665?autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&autopause=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe class = "vid_attr" src="https://player.vimeo.com/video/435294308?autoplay=0&loop=0&title=0&byline=0&portrait=0&muted=0&autopause=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
+            <div></div>
+            <div></div>
+            <div>
+                <div class="text2">
+                    <br>
+                    꿈꾸는 요셉, 2020
+                </div>
+                <div class="text3">
+                    이지민 (Jimin Lee)
+                </div>
+            </div>
+            <div></div>
+            <div></div>
             <div class = "vid">
-                <iframe class = "vid_attr" src="https://player.vimeo.com/video/425648916?autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&autopause=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe class = "vid_attr" src="https://player.vimeo.com/video/435294927?autoplay=0&loop=0&title=0&byline=0&portrait=0&muted=0&autopause=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
-                
+            <div></div>
+            <div></div>
+            <div>
+                <div class="text2">
+                    <br>
+                    genesis, 2020
+                </div>
+                <div class="text3">
+                    권유경 (YooKyung Kwon)
+                </div>
+                <div></div>
+            </div>
+
+            
         </div>
     </body>
 
