--- a/main4.html
+++ b/main4.html
@@ -274,8 +274,7 @@
                             <span class="words_style brightness">
                                 fish-hurt <br>
                                 request-salt <br>
-                                blind-daughter <br>
-                                safe-fall <br>
+                                blind-son <br>
                                 principle-father <br>
                                 after-storm <br>
                             </span>
@@ -297,7 +296,7 @@
                             position="relative" width="100%" height="25%" frameborder="0" style="border:0;"
                             allowfullscreen="" aria-hidden="false" tabindex="0">
                         </iframe>
-                        <img src="./images/face2.png" style="width:100%;height:auto;">
+                        <!-- <img src="./images/face2.png" style="width:100%;height:auto;"> -->
                     </div>
                 </div>
 
