--- a/main4.html
+++ b/main4.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>DG</title>
+    <title>Room2</title>
     <meta charset="UTF-8">
     <link rel="icon" href="./images/type a 자산 6.png" type="image/x-icon" />
     <link rel="shortcut icon" href="./images/type a 자산 6.png" type="image/x-icon" />
