--- a/random.html
+++ b/random.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-    <title>DG</title>
+    <title>Room2</title>
     <meta charset = "UTF-8">
        <style>
         body {
