--- a/videotest.html
+++ b/videotest.html
@@ -133,7 +133,7 @@
             <div></div>
             <div></div>
             <div class = "vid">
-                <iframe class = "vid_attr" src="https://player.vimeo.com/video/435294308?autoplay=0&loop=1&title=0&byline=0&portrait=0&muted=0&autopause=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe class = "vid_attr" src="https://www.youtube.com/embed/TZ3iNt-n1hY?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div></div>
             <div></div>
@@ -149,7 +149,7 @@
             <div></div>
             <div></div>
             <div class = "vid">
-                <iframe class = "vid_attr" src="https://player.vimeo.com/video/456051179?autoplay=0&loop=1&title=0&byline=0&portrait=0&muted=0&autopause=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe class = "vid_attr" src="https://www.youtube.com/embed/aYH0YkXhTZ8?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div></div>
             <div></div>
