--- a/videotest.html
+++ b/videotest.html
@@ -133,7 +133,7 @@
             <div></div>
             <div></div>
             <div class = "vid">
-                <iframe class = "vid_attr" src="https://www.youtube.com/embed/TZ3iNt-n1hY?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class = "vid_attr" src="https://www.youtube.com/embed/bdo36PKsfwI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div></div>
             <div></div>
