--- a/videotest.html
+++ b/videotest.html
@@ -89,7 +89,7 @@
         <div class="container_header" style="position: stikcy;">
             <div>
                 <span class="text1">
-                back
+                VR VIDEO TEST
                 </span>
                 </a>
             </div>
