--- a/videotest.html
+++ b/videotest.html
@@ -101,6 +101,8 @@
             <div></div>
             <div class = "vid">
                 <iframe class = "vid_attr" src="https://player.vimeo.com/video/479102928?autoplay=0&loop=1&title=0&byline=0&portrait=0&muted=0&autopause=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/484393917" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
             </div>
             <div></div>
             <div></div>
